get all intencao
